--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Nunes"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.2"
+django-rest-framework = "^0.1.0"
+django-extensions = "^3.1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
